--- a/templates/about.html
+++ b/templates/about.html
@@ -7,17 +7,17 @@
 {{ header('About', True) }}
   <div data-role="content">
     <div>
-      <p>CapitalTransitInfo was built by <a href="http://www.kurtraschke.com/">Kurt Raschke</a> to address outstanding deficiencies in public transit apps for the DC area in a platform-agnostic way.</p>
-      <p>CapitalTransitInfo uses real-time data from <a href="http://wmata.com/">WMATA</a>, <a href="http://www.dccirculator.com/">DC Circulator</a>, and <a href="http://www.arlingtontransit.com/">ART - Arlington Transit</a>.</p>
-      <p>The application uses <a href="">Flask</a>, <a href="">MongoDB</a>, and <a href="">jQuery Mobile</a>.</p>
+      <p>CapitalTransitInfo was built by <a rel="external" href="http://www.kurtraschke.com/">Kurt Raschke</a> to address outstanding deficiencies in public transit apps for the DC area in a platform-agnostic way.</p>
+      <p>CapitalTransitInfo uses real-time data from <a rel="external" href="http://wmata.com/">WMATA</a>, <a rel="external" href="http://www.dccirculator.com/">DC Circulator</a>, and <a rel="external" href="http://www.arlingtontransit.com/">ART - Arlington Transit</a>.</p>
+      <p>The application uses <a rel="external" href="http://flask.pocoo.org/">Flask</a>, <a rel="external" href="http://www.mongodb.org/">MongoDB</a>, and <a rel="external" href="http://jquerymobile.com/">jQuery Mobile</a>.</p>
       <p>Icon attribution:</p>
       <ul>
-        <li><a href="http://thenounproject.com/noun/geolocation/#icon-No721">Geolocation</a>, by Karen McGrane, Josh Clark, and Aliona Katz, from <a href="http://thenounproject.com">The Noun Project</a> collection</li>
-        <li><a href="http://thenounproject.com/noun/bullhorn/#icon-No1580">Bullhorn</a>, by Travis Yunis, from <a href="http://thenounproject.com">The Noun Project</a> collection</li>
-        <li><a href="http://thenounproject.com/noun/capital/#icon-No1761">Capital</a>, by Jonathan Keating, from <a href="http://thenounproject.com">The Noun Project</a> collection</li>
-        <li>Various icons from the <a href="http://www.aiga.org/symbol-signs/">AIGA symbol signs</a></li>
+        <li><a rel="external" href="http://thenounproject.com/noun/geolocation/#icon-No721">Geolocation</a>, by Karen McGrane, Josh Clark, and Aliona Katz, from <a rel="external" href="http://thenounproject.com">The Noun Project</a> collection</li>
+        <li><a rel="external" href="http://thenounproject.com/noun/bullhorn/#icon-No1580">Bullhorn</a>, by Travis Yunis, from <a rel="external" href="http://thenounproject.com">The Noun Project</a> collection</li>
+        <li><a rel="external" href="http://thenounproject.com/noun/capital/#icon-No1761">Capital</a>, by Jonathan Keating, from <a rel="external" href="http://thenounproject.com">The Noun Project</a> collection</li>
+        <li>Various icons from the <a rel="external" href="http://www.aiga.org/symbol-signs/">AIGA symbol signs</a></li>
       </ul>
-      <p>Send feedback to <a href="mailto:kurt@kurtraschke.com">kurt@kurtraschke.com</a>.  Please note that issues with the public transit services themselves need to be directed to the appropriate agencies.</p>
+      <p>Send feedback to <a rel="external" href="mailto:kurt@kurtraschke.com">kurt@kurtraschke.com</a>.  Please note that issues with the public transit services themselves need to be directed to the appropriate agencies.</p>
     </div>
   </div>
 </div>
