--- a/templates/wmata/bus.html
+++ b/templates/wmata/bus.html
@@ -21,7 +21,7 @@
           </div>
         </form>
       </li>
-      <li><a href="{{url_for('wmata_bus_routes')}}">View Routes</a></li>
+      <!--<li><a href="{{url_for('wmata_bus_routes')}}">View Routes</a></li>-->
    </ul>
   </div>
 </div>
